Addressing overflow issue causing issue #9, addressing :focus state of big buttons

--- a/_assets/styles/components/_events-grid.scss
+++ b/_assets/styles/components/_events-grid.scss
@@ -1,5 +1,6 @@
 // Events Grid
 .events-grid-container {
+  overflow: hidden;
   position: relative;
   &::before,
   &::after {
