--- a/_assets/styles/components/_ui-components.scss
+++ b/_assets/styles/components/_ui-components.scss
@@ -56,8 +56,7 @@
   border: 1px solid transparent;
   transition: background-color .2s ease-out, color .2s ease-out, border .2s ease-out;
 
-  &:hover,
-  &:focus {
+  &:hover {
     color: color('black');
     border-color: color('gray');
     background-color: color('white');
